styled the navigation component

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,8 +1,11 @@
-.nav{
+.nav ul{
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    list-style: none;
+    font-size: 1.5em;
+    align-items: center;
 }
-ul{
-    display: flex;
-    justify-content: space-around;
+.nav{
+    background: rgba(7, 148, 148, 0.801);
+    height: 5em;
 }
